cleaned white space and fixed formatting of grids for layout

--- a/public/css/substyles.css
+++ b/public/css/substyles.css
@@ -210,7 +210,7 @@ padding-top: 20px;}
 
 @media screen and (min-width: 40rem) {
   .product-grid {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
 
   }
 
